--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "~0.79.3"
